# Change Log

All notable changes to this project will be documented in this file.
The format is based on [Keep a Changelog](http://keepachangelog.com/)

## [Unreleased]

### Added

### Fixed

### Changed

## [1.4.0] - 2024-05-14

### Added
* New recipe: slurm_accounting_with_email with the Slurm-Mail plugin
* New recipe: entra_id enables integration of RES with Entra ID

### Fixed
* In slurm_accounting_with_email, fixed path to HPC recipes bucket

### Changed
* In login_node_for_res, RES admin action is no longer required to enable a PC login node
* In res_demo_env, storage resources created for the demo are deleted when the parent stack is deleted
* In demo_managed_ad, the domain name (and subdomain if included) is output as Domain Components in a string
* In demo_managed_ad, a console URL to the domain management node is output as a link
* In res_demo_env, the service account password ARN is returned as an output

## [1.3.0] - 2024-04-04

### Added
* New recipe: pcluster/login_node_for_res which provides a ParallelCluster LoginNode for Research and Engineering Studio`
* New recipe: pcluster/decoupled_storage which demonstrates the decoupled storage feature in PC 3.9

### Fixed
* Updated Python runtime in hpc_large_scale to python3.9
* In mountpoint_s3, point to proper location for mountpoint-s3 on Github
* Template URLs referencing the HPC recipes bucket are no longer templated to region and partition

### Changed
* In res_demo_env, you can now restrict inbound access using a CIDR or VPC Prefix List
* In the res_demo_env external resources template, you can now configure inbound access using a CIDR or VPC Prefix List
* In the res_demo_env external resources template, you can now configure whether the EFS storage uses elastic or burting throughput
* In the res_demo_env external resources template, you can now configure whether the AD admin instances stop after launching
* In res_demo_env, the AD admin instances automatically stop after launching to reduce costs